# super-kafka

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
design/: super_kafka_philosophy.md
src/: App.tsx  api.ts  index.css  main.tsx  types.ts  useUpdateCheck.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: cluster_pool.rs  config.rs  connect_client.rs  kafka_client.rs  lib.rs  main.rs  schema_client.rs  types.rs
src-tauri/src/commands/: clusters.rs  connect.rs  fs.rs  groups.rs  messages.rs  mod.rs  schema.rs  settings.rs  topics.rs  update.rs
src/components/Cluster/: ClusterFormModal.tsx
src/components/Common/: DurationInput.tsx
src/components/Connect/: ConnectorDetailDrawer.tsx
src/components/Group/: ResetOffsetModal.tsx
src/components/Layout/: MainLayout.tsx
src/components/Message/: ExportColumnsModal.tsx  MessageDetailDrawer.tsx
src/components/Topic/: TopicConsumerGroups.tsx
src/pages/: Cluster.tsx  ClusterDetail.tsx  Connect.tsx  ConsumerGroups.tsx  MessageBrowser.tsx  MessageProducer.tsx  SchemaRegistry.tsx  Settings.tsx  TopicDetail.tsx  Topics.tsx
src/store/: clusterStore.tsx  settingsStore.tsx
src/utils/: export.ts  format.ts  webviewGuards.ts
