[package]
name = "super-kafka"
version = "0.1.0"
edition = "2021"

[lib]
name = "super_kafka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "curl-static", "zstd", "libz"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"
rayon = "1"
thiserror = "2"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Patched rdkafka-sys: enables WITH_SNAPPY in the cmake build so snappy-compressed
# messages can be consumed (upstream cmake build leaves snappy disabled; breaks on
# Windows). Fork only adds one line to build.rs; rdkafka-sys stays 4.10.0+2.12.1.
[patch.crates-io]
rdkafka-sys = { git = "https://github.com/Jacksonary/rust-rdkafka", rev = "33b6569e910e2404f322f6bca89fd5c10071859d" }
